src/components/home/ReviewsCarousel.module.css
.sliderContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px;
  border-radius: 20px;
  max-width: 1000px;
  margin: 80px auto;
  position: relative;
  border-radius: 10px;
  background: linear-gradient(135deg, #ffd700 0%, #0089ff 50%);
  box-shadow: 0 4px 12px 0px rgba(0, 0, 0, 0.2);
}

.content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  background-color: #f9f9f9;
  padding: 50px;
  border-radius: 8px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
}

.text {
  font-family: "Ropamix medium italic", "Playfair Display";
  font-size: 1.4rem;
  font-style: italic;
  color: var(--blue);
  margin-bottom: 15px;
  position: relative;
}

.parentName {
  font-family: "Ropamix extra light", "Playfair Display";
  font-weight: bold;
  font-size: 1.4rem;
  margin-bottom: 5px;
}

.date {
  font-family: "Ropamix light italic", "Playfair Display";
  font-style: italic;
  font-size: 1.2rem;
  color: gray;
  margin-bottom: 20px;
}

.readMoreButton {
  background-color: transparent;
  font-family: "Ropamix light italic", "Playfair Display";
  font-size: 1.2rem;
  border: none;
  cursor: pointer;
  padding-left: 0px;
  text-decoration: none;
}

.readMoreButton:hover {
  color: rgb(54, 54, 54);
}

@media screen and (max-width: 480px) {
  .sliderContainer {
    padding: 30px 15px 50px 15px;
  }
}

